Fix HTML formatting and update image source

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input readonly placeholder="Password" class="display" data-passwordDisplay>
            <button data-copy>
              <span data-copyMsg></span>
-             <img src="/3-Password Generator/copy-button.png " alt="copy" width="23" height="23">
+             <img src="copy-button.png " alt="copy" width="23" height="23">
            </button>
         </div>
 
@@ -74,3 +74,4 @@
  
 
 </html>
+
